--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,9 +44,13 @@ footer {
 }
 
 header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   height: auto;
   position: fixed;
   -webkit-box-pack: justify;
