--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -69,6 +69,7 @@ header{
     //     width: 50%;
     // }
     background: #be0014;
+    background: blue;
     background: linear-gradient(180deg, rgba(#be0014,1) 0%, rgba(224,17,17,0) 100%); 
     // background: rgb(44,44,44);
     // background: linear-gradient(180deg, rgba(44,44,44,1) 0%, rgba(44,44,44,0) 100%);
