--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -69,17 +69,16 @@ header{
     //     width: 50%;
     // }
     background: #be0014;
-    background: blue;
     background: linear-gradient(180deg, rgba(#be0014,1) 0%, rgba(224,17,17,0) 100%); 
-    // background: rgb(44,44,44);
-    // background: linear-gradient(180deg, rgba(44,44,44,1) 0%, rgba(44,44,44,0) 100%);
+    background: rgb(44,44,44);
+    background: linear-gradient(180deg, rgba(44,44,44,1) 0%, rgba(44,44,44,0) 100%);
     #fd-logo{
         width:clamp(20px, 40vw, 300px);
         
     }
     .header-cta{ 
         svg{
-            width:clamp(10px, 10vw, 100px);
+            width:clamp(10px, 12vw, 100px);
     }
 }
 }
@@ -267,6 +266,7 @@ section, div{
     
     
 }
+
 .service-container{
     //margin:20vh 0;  
     //@media screen and (min-width: 740px){
@@ -278,6 +278,7 @@ section, div{
        
 
         .service-card{
+            
             border:2px, solid, #2c2c2c;
             box-shadow: 10px 10px 29px -5px rgba(0,0,0,0.38);
             margin:1vh 1vw;
@@ -286,6 +287,7 @@ section, div{
             flex-direction: column;
             gap:1em;
             width: clamp(100px, 80vw, 600px);
+            width: 80vw;
             //height: 70%;
             .service-title{
                 font-size: clamp(16px, 3vw, 20px); 
@@ -319,21 +321,35 @@ section, div{
         overflow: hidden;
         width: 100%;
     }
+
     .services{
        
-        
+       
         &.moreContent{
             display: flex;
             flex-direction: row;
+            top: 0;
+            left: 0;
            // height: 40%;
+           //width: 4*100vh;
+           width:min-content;
+        //    border: #be0014 1px solid;
+           @media screen and (min-width: 740px){
+              
+            }
+            margin-left: calc(50vw - 400px - 10vw - 3vw);
+           
             .service-card{
+                border: springgreen 1px solid;
                 border:2px, solid, #2c2c2c;
                 box-shadow: 10px 10px 29px -5px rgba(0,0,0,0.38);
-                margin:6vh 6vw;
-                padding:6vh 6vw;
+                margin:6vh 3vw;
+                padding:6vh 3vw;
                 display: flex;
                 flex-direction: column;
                 height: 70vh;
+                width: 800px;
+                //width:clamp(100px, 60vw, 800px);
                 gap:2em;
                 .service-title{
                     font-weight: 600;
@@ -350,7 +366,7 @@ section, div{
         .extended-content{
             //display: none;
             height: 70%;
-            width: 40vw;
+           // width: 40vw;
         }
         display: flex;
         flex-direction: column;
@@ -400,6 +416,7 @@ section, div{
     }
 
 }
+
 .wordpress{
     font-size:30em;
     color:#006494;
