--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -86,10 +86,10 @@ section, div{
     box-sizing: border-box;
 }
 //section{padding-top:100px;}
-.marker{
-    border:1px solid yellow;
-    width: 100%;
-}
+// .marker{
+//     border:1px solid yellow;
+//     width: 100%;
+// }
 
 // section{
 //     border: red 1px solid;
