--- a/styles/styles.css
+++ b/styles/styles.css
@@ -291,8 +291,7 @@ section, div {
 
 .service-container .service-card {
   border: 2px, solid, #2c2c2c;
-  -webkit-box-shadow: 10px 10px 29px -5px rgba(0, 0, 0, 0.38);
-          box-shadow: 10px 10px 29px -5px rgba(0, 0, 0, 0.38);
+  border-radius: 50px;
   margin: 1vh 1vw;
   padding: 1vh 1vw;
   display: -webkit-box;
@@ -305,45 +304,8 @@ section, div {
   gap: 1em;
   width: clamp(100px, 80vw, 600px);
   width: 80vw;
-}
-
-.service-container .service-card.service-d {
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#a18cd1), to(#fbc2eb));
-  background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
-  color: rgba(40, 17, 60, 0.6) !important;
-}
-
-.service-container .service-card.service-d p {
-  color: rgba(40, 17, 60, 0.6);
-}
-
-.service-container .service-card.service-fs {
-  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
-  color: rgba(40, 17, 60, 0.6) !important;
-}
-
-.service-container .service-card.service-fs p {
-  color: rgba(40, 17, 60, 0.6);
-}
-
-.service-container .service-card.service-os {
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#9890e3), to(#b1f4cf));
-  background-image: linear-gradient(to top, #9890e3 0%, #b1f4cf 100%);
-  color: rgba(40, 17, 60, 0.6) !important;
-}
-
-.service-container .service-card.service-os p {
-  color: rgba(40, 17, 60, 0.6);
-}
-
-.service-container .service-card.service-seo {
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#fddb92), to(#d1fdff));
-  background-image: linear-gradient(to top, #fddb92 0%, #d1fdff 100%);
-  color: rgba(40, 17, 60, 0.6) !important;
-}
-
-.service-container .service-card.service-seo p {
-  color: rgba(40, 17, 60, 0.6);
+  -webkit-box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.15), -2px -2px 12px rgba(255, 255, 255, 0.08);
+          box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.15), -2px -2px 12px rgba(255, 255, 255, 0.08);
 }
 
 .service-container .service-card .service-title {
@@ -426,6 +388,8 @@ section, div {
   border: 2px, solid, #2c2c2c;
   -webkit-box-shadow: 10px 10px 29px -5px rgba(0, 0, 0, 0.38);
           box-shadow: 10px 10px 29px -5px rgba(0, 0, 0, 0.38);
+  -webkit-box-shadow: 2px 10px 10px 0px rgba(0, 0, 0, 0.15), -2px -2px 30px 0px rgba(255, 255, 255, 0.08);
+          box-shadow: 2px 10px 10px 0px rgba(0, 0, 0, 0.15), -2px -2px 30px 0px rgba(255, 255, 255, 0.08);
   margin: 6vh 3vw;
   padding: 6vh 3vw;
   display: -webkit-box;
