--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -280,37 +280,39 @@ section, div{
         }
 
         .service-card{
-            &.service-d{
-                background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
-                color:rgba(40, 17, 60, 0.6) !important;
-                p{
-                    color:rgba(40, 17, 60, 0.6);
-                }
-            }
-            &.service-fs{
-                background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
-                color:rgba(40, 17, 60, 0.6) !important;
-                p{
-                    color:rgba(40, 17, 60, 0.6);
-                }
-            }
-            &.service-os{
-                background-image: linear-gradient(to top, #9890e3 0%, #b1f4cf 100%);
-                color:rgba(40, 17, 60, 0.6) !important;
-                p{
-                    color:rgba(40, 17, 60, 0.6);
-                }
-            }
-            &.service-seo{
-                background-image: linear-gradient(to top, #fddb92 0%, #d1fdff 100%);;
-                color:rgba(40, 17, 60, 0.6) !important;
-                p{
-                    color:rgba(40, 17, 60, 0.6);
-                }
-            }
+            // &.service-d{
+            //     background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+            //     color:rgba(40, 17, 60, 0.6) !important;
+            //     p{
+            //         color:rgba(40, 17, 60, 0.6);
+            //     }
+            // }
+            // &.service-fs{
+            //     background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+            //     color:rgba(40, 17, 60, 0.6) !important;
+            //     p{
+            //         color:rgba(40, 17, 60, 0.6);
+            //     }
+            // }
+            // &.service-os{
+            //     background-image: linear-gradient(to top, #9890e3 0%, #b1f4cf 100%);
+            //     color:rgba(40, 17, 60, 0.6) !important;
+            //     p{
+            //         color:rgba(40, 17, 60, 0.6);
+            //     }
+            // }
+            // &.service-seo{
+            //     background-image: linear-gradient(to top, #fddb92 0%, #d1fdff 100%);;
+            //     color:rgba(40, 17, 60, 0.6) !important;
+            //     p{
+            //         color:rgba(40, 17, 60, 0.6);
+            //     }
+            // }
             
             border:2px, solid, #2c2c2c;
-            box-shadow: 10px 10px 29px -5px rgba(0,0,0,0.38);
+            border-radius: 50px;
+            // box-shadow: 10px 10px 29px -5px rgba(0,0,0,0.15),
+            // 10px 10px 29px -5px rgba(235, 226, 226, 0.38);
             margin:1vh 1vw;
             padding:1vh 1vw;
             display: flex;
@@ -318,6 +320,8 @@ section, div{
             gap:1em;
             width: clamp(100px, 80vw, 600px);
             width: 80vw;
+            box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.15), -2px -2px 12px rgba(255, 255, 255, 0.08);
+
             //height: 70%;
             .service-title{
                 font-size: clamp(16px, 3vw, 20px); 
@@ -376,6 +380,8 @@ section, div{
                // border: springgreen 1px solid;
                 border:2px, solid, #2c2c2c;
                 box-shadow: 10px 10px 29px -5px rgba(0,0,0,0.38);
+                box-shadow: 2px 10px 10px 0px rgba(0, 0, 0, 0.15), -2px -2px 30px 0px rgba(255, 255, 255, 0.08);
+
                 margin:6vh 3vw;
                 padding:6vh 3vw;
                 display: flex;
