--- a/styles/styles.css
+++ b/styles/styles.css
@@ -524,14 +524,12 @@ body {
 }
 
 .hero {
-  background: -webkit-gradient(linear, left bottom, left top, from(rgba(44, 44, 44, 0)), color-stop(20%, rgba(44, 44, 44, 0.625088)), color-stop(37%, rgba(44, 44, 44, 0.742735)), color-stop(64%, #2c2c2c), to(#2c2c2c));
-  background: linear-gradient(0deg, rgba(44, 44, 44, 0) 0%, rgba(44, 44, 44, 0.625088) 20%, rgba(44, 44, 44, 0.742735) 37%, #2c2c2c 64%, #2c2c2c 100%);
+  background-image: radial-gradient(circle, #ffffff, #c5c5c5, #8e8e8e, #5b5b5b, #2c2c2c);
 }
 
 .responsive {
   position: relative;
-  width: 100%;
-  height: 100vh;
+  height: 60vh;
   padding: 2vh 2vw;
 }
 
