--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -540,12 +540,12 @@ body {
 // }
 
 .hero{
-  background: linear-gradient(0deg, rgba(44,44,44,0) 0%, rgba(44,44,44,0.6250875350140056) 20%, rgba(44,44,44,0.742734593837535) 37%, rgba(44,44,44,1) 64%, rgba(44,44,44,1) 100%);
+  background-image: radial-gradient(circle, #ffffff, #c5c5c5, #8e8e8e, #5b5b5b, #2c2c2c);
 }
 .responsive {
   position: relative;
-  width: 100%;
-  height: 100vh;
+  //width: 80%;
+  height: 60vh;
   padding: 2vh 2vw;
   .cls-1 {
     fill: #383838;
