--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -117,16 +117,19 @@ div {
 // .logo-header{
 //     .fd{width:clamp(20px, 40vw, 300px);}
 // }
-.logo-header {
-  width: 20vw;
-}
-.header-cta {
-  svg {
-    width: clamp(10px, 12vw, 100px);
+.logo-header, .header-cta {
+  height: 5vh;
+  svg{
+    height: 100%;
   }
 }
+// .header-cta {
+//   svg {
+//     width: clamp(10px, 12vw, 100px);
+//   }
+// }
 .fd , #logo-use{
-  width: 80%;
+  //width: 80%;
   //width: 200px;
   //position: fixed;
   // path {
@@ -155,7 +158,7 @@ body {
   //   }
 }
 .frieDevelopment {
-  margin:0;
+  //margin:0;
   .btn-container {
     display: flex;
   }
